--- a/css/styles.css
+++ b/css/styles.css
@@ -88,7 +88,7 @@ a {
 .imgf {
   background-color: #b7c9f2;
   width: 50%;
-  border-radius: 15px;
+  /* border-radius: 15px; */
   /* box-shadow: 2px 2px 2px black; */
 }
 .subcontainer2 {
